<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Family Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="p_address">Postal Address</string>
    <string name="age">Age</string>
    <string name="profile">PROFILE</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
</resources>
